--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<script type="text/javascript">
   if (screen.width <= 699) {
-    document.location = "w3docs.com";
+    document.location = "indexmobil";
   }
 </script>
 <meta charset="utf-8"/>
