--- a/index.html
+++ b/index.html
@@ -3379,7 +3379,9 @@ window.application = new Application();
 		<span>Produse</span>
 	</div>
 	<div id="Descriere">
-		<span>Descriere</span>
+		<div id="Descriere">
+		<a href="https://pvpnqn6634.github.io/fumaticopiitest/descrierelightbluepc" style="text-decoration: none; color: #707070">Descriere</a>
+	</div>
 	</div>
 	<svg class="Rectangle_29">
 		<rect id="Rectangle_29" rx="16" ry="16" x="0" y="0" width="200" height="390">
