--- a/descrierelightbluepc.html
+++ b/descrierelightbluepc.html
@@ -3065,7 +3065,9 @@ window.application = new Application();
 	<img id="logo" src="logo.png" srcset="logo.png 1x, logo@2x.png 2x">
 		
 	<div id="Produse">
-		<span>Produse</span>
+		<div id="Descriere">
+		<a href="https://pvpnqn6634.github.io/fumaticopiitest/" style="text-decoration: none; color: #707070">Descriere</a>
+	</div>
 	</div>
 	<div id="Descriere">
 		<span>Descriere</span>
